--- a/src/components/transfer2/src/maTreeTpl.html
+++ b/src/components/transfer2/src/maTreeTpl.html
@@ -1,4 +1,5 @@
-<div class="ma-tree-select transition-none">
+<div class="ma-tree-select transition-none"
+  ng-disabled="disabled">
   <div class="custom-multi-select form-control ui-select-container ui-select-multiple select2 select2-container select2-container-multi ng-isolate-scope ng-not-empty ng-valid custom-tree-select custom-static-select">
 
     <div class="ui-select-dropdown select2-drop select2-with-searchbox select2-drop-active select2-display-none">
