--- a/src/scss/_tree-select.scss
+++ b/src/scss/_tree-select.scss
@@ -25,6 +25,7 @@
   left: 0px !important;
   top: 0px !important;
 }
+
 .ui-select-choices-row.hidden,
 .ui-select-choices-row.hide {
   display: none;
@@ -1456,7 +1457,7 @@ disabled look for disabled choices in the results dropdown
 .custom-tree-select.select2-container-multi .select2-results li.ui-select-choices-row .select2-result-label > div {
   padding: 0px 12px 0px 12px;
   .ma-checkbox {
-    padding:  4px 0;
+    padding: 4px 0;
   }
 }
 
@@ -1644,6 +1645,14 @@ disabled look for disabled choices in the results dropdown
 .ma-tree-select {
   width: 240px;
   display: inline-block;
+  &[disabled] {
+    * {
+      cursor: not-allowed;
+    }
+    .ui-select-choices-row:hover {
+      background-color: inherit;
+    }
+  }
   .custom-multi-select {
     width: 100%;
     > .ma-input {
