--- a/src/components/transfer2/src/maTreeTpl.html
+++ b/src/components/transfer2/src/maTreeTpl.html
@@ -22,6 +22,7 @@
         </div>
       </div>
       <ul tabindex="-1"
+        ng-class="{'has-search': $ctrl.searchKey}"
         class="ui-select-choices ui-select-choices-content select2-results ng-scope">
 
       </ul>
