--- a/src/scss/_dropdown.scss
+++ b/src/scss/_dropdown.scss
@@ -1,12 +1,10 @@
 .ma-dropdown {
   display: inline-block;
   position: relative;
-
-  &.right .ma-dropdown-container{
+  &.right .ma-dropdown-container {
     right: 0px;
     left: auto;
   }
-
   &.top .ma-dropdown-container {
     top: auto;
     bottom: 100%;
@@ -14,7 +12,6 @@
     border-radius: 4px 4px 0 0;
     @include transform-origin(bottom center);
   }
-
   .ma-dropdown-container {
     position: absolute;
     z-index: 10;
@@ -25,16 +22,13 @@
     box-shadow: 0 1px 3px 0 rgba($black, 0.25);
     left: 0px;
     top: 100%;
-    opacity:0;
+    opacity: 0;
     visibility: hidden;
     @include transform(scaleY(0));
     @include transform-origin(top center);
     -webkit-transition: opacity 300ms ease, visibility 300ms ease, transform 300ms ease, -webkit-transform 300ms ease;
     transition: opacity 300ms ease, visibility 300ms ease, transform 300ms ease, -webkit-transform 300ms ease;
-
     border-radius: 0 0 4px 4px;
-
-
     &.show {
       opacity: 1;
       visibility: visible;
@@ -50,7 +44,6 @@
       cursor: pointer;
       @include transition(background-color 300ms ease);
       @include unselect();
-
       &:hover {
         background-color: $hover;
         &.active.is-multiple {
@@ -63,16 +56,13 @@
           background-color: inherit;
         }
       }
-
       &.is-multiple {
         padding-left: 10px;
       }
-
       &.null-text {
         text-align: center;
         pointer-events: none;
       }
-
       &.hide {
         opacity: 0;
         height: 0px;
@@ -81,7 +71,6 @@
         visibility: hidden;
         @include transform(scaleY(1));
       }
-
       .ma-checkbox {
         display: block;
         pointer-events: none;
@@ -90,14 +79,20 @@
     .ma-dropdown-container-content {
       max-height: 32px * 5;
       overflow: auto;
+      &[disabled] {
+        .ma-dropdown-item {
+          cursor: not-allowed;
+          &:hover {
+            background-color: inherit;
+          }
+        }
+      }
     }
-
     .ma-dropdown-buttons {
       text-align: right;
       border-top: 1px solid $disabled;
       padding: 5px;
     }
-
     .ma-dropdown-search-bar {
       padding: 5px;
       .ma-input {
@@ -110,7 +105,6 @@
             border-color: $outlines;
           }
         }
-
         &.ma-input-search-normal:before {
           color: $outlines;
         }
