tree-select 和 select 搜索功能无法使用

--- a/src/components/dropdown/src/maDropdownTpl.html
+++ b/src/components/dropdown/src/maDropdownTpl.html
@@ -5,7 +5,7 @@
       show: show || static == 'true'
     }">
     <div class="ma-dropdown-search-bar"
-      ng-if="searchBar == 'true'">
+      ng-show="searchBar == 'true'">
       <ma-input ng-model="searchKey"
         ng-disabled="disabled"
         class="ma-input-search-normal"></ma-input>
