--- a/src/components/table/src/trTpl.html
+++ b/src/components/table/src/trTpl.html
@@ -1,6 +1,3 @@
-<tr ng-class="{
-    'selected-row': selector && $tableCtrl.checkboxes.items[row&&{index}[$tableCtrl.dataflagId]]
-  }"
-  class="&&{rowCustomClass}">
+<tr class="&&{rowCustomClass}">
 
 </tr>
