--- a/example/pages/components/data-entry/transfer2/index.html
+++ b/example/pages/components/data-entry/transfer2/index.html
@@ -23,6 +23,7 @@
         <h4>树形穿梭框</h4>
         <ma-tree-transfer2
           ng-model="selectTreeValue"
+          ma-model="selectTreeParentValue"
 
           ma-data="treeData"
           ma-value-key="value1"
