--- a/src/components/transfer2/src/itemTpl.html
+++ b/src/components/transfer2/src/itemTpl.html
@@ -14,7 +14,7 @@
       <!-- <div class="click-mask"></div> -->
       <label class="ma-checkbox">
         <input type="checkbox" />
-        <i class="checkbox-appearance"></i>
+        <i class="ma-checkbox-appearance"></i>
         <span>{{$value[textKey]}}</span>
       </label>
     </div>
