--- a/example/pages/components/general/icon/index.html
+++ b/example/pages/components/general/icon/index.html
@@ -31,7 +31,7 @@
         </tr>
         <tr>
           <td>ma-size</td>
-          <td>尺寸x</td>
+          <td>尺寸px</td>
           <td>Int</td>
           <td>16</td>
         </tr>
