列表方式的上传查看文件功能bug修复

--- a/src/components/upload/src/maUploadTpl.html
+++ b/src/components/upload/src/maUploadTpl.html
@@ -13,7 +13,7 @@
       ng-show="file.progress === undefined || file.progress === 100"
       ma-type="paperclip"
     ></ma-icon>
-    <a href="javascript:void(0)" ma-click="viewFile(file)">{{file.name}}</a>
+    <a href="javascript:void(0)" ma-click="viewFile(ngModel, file, $index)">{{file.name}}</a>
     <ma-icon
       class="close"
       ma-type="close"
