--- a/example/pages/components/navigation/menu/index.html
+++ b/example/pages/components/navigation/menu/index.html
@@ -5,7 +5,8 @@
 </ma-crumb> -->
 <ma-crumb-auto></ma-crumb-auto>
 <div class="navigation-menu-page">
-  <div class="container" ma-full-container>
+  <div class="container"
+    ma-full-container>
     <h2>Menu 菜单</h2>
     <p>为页面和功能提供导航的菜单列表。</p>
 
@@ -19,7 +20,10 @@
     <div class="p">
       <h3>侧边栏菜单</h3>
       <code ng-bind="siderMenu"></code>
-      <h4>API</h4>
+
+    </div>
+    <h3>API</h3>
+    <p>
       <table>
         <tr>
           <th>属性</th>
@@ -43,7 +47,6 @@
           <td>YES</td>
         </tr>
       </table>
-    </div>
+    </p>
   </div>
 </div>
-
