icon buton message alert jsfiddle

--- a/example/pages/components/feedback/alert/index.html
+++ b/example/pages/components/feedback/alert/index.html
@@ -33,6 +33,9 @@
           text: '警告提示框，主要用来显示重要信息。',
         }];
       </code>
+      <div class="pt-10">
+        <a href="https://jsfiddle.net/youpinyao/4zqqwuej/" target="_blank">jsfiddle</a>
+      </div>
     </div>
     <h3>API</h3>
     <div class="p">
