--- a/example/pages/components/feedback/message/index.html
+++ b/example/pages/components/feedback/message/index.html
@@ -23,6 +23,9 @@
     $message.danger('警告提示框，主要用来显示重要信息。');
     $message.warning('危险提示框，主要用来显示错误信息。');
       </code>
+      <div class="pt-10">
+        <a href="https://jsfiddle.net/youpinyao/0zvsqb5g/" target="_blank">jsfiddle</a>
+      </div>
     </div>
 
     <h3>API</h3>
