--- a/example/pages/components/general/button/index.html
+++ b/example/pages/components/general/button/index.html
@@ -76,6 +76,10 @@
           ma-type="danger"
           ng-disabled="true">Danger</ma-button>
       </div>
+      <div class="col-24 pt-10">
+        <a href="https://jsfiddle.net/youpinyao/q3bw0zsz/"
+          target="_blank">jsfiddle</a>
+      </div>
     </div>
 
     <h3>API</h3>
