--- a/example/pages/components/data-entry/datepicker/index.html
+++ b/example/pages/components/data-entry/datepicker/index.html
@@ -18,6 +18,7 @@
         <ma-date-picker name="datepicker1"
           ng-model="pickerDate"
           ma-view="year"
+          ma-auto-close="true"
           ma-min-view="year"
           ma-format="YYYY">
       </div>
