--- a/src/components/datepicker/src/maDatePickerTpl.html
+++ b/src/components/datepicker/src/maDatePickerTpl.html
@@ -9,6 +9,7 @@
     min-view="{{minView}}"
     min-date="_minDate"
     max-date="_maxDate"
+    auto-close="{{autoClose}}"
     ng-disabled="disabled"
     placeholder="{{maPlaceholder}}"
     format="{{format}}">
