--- a/example/pages/components/feedback/message/index.html
+++ b/example/pages/components/feedback/message/index.html
@@ -5,27 +5,26 @@
 </ma-crumb> -->
 <ma-crumb-auto></ma-crumb-auto>
 <div class="feedback-message-page">
-  <div class="container" ma-full-container>
+  <div class="container"
+    ma-full-container>
     <h2>Message 全局提示</h2>
     <p>
-     可提供成功、警告和错误等反馈信息。
-     顶部居中显示并自动消失，是一种不打断用户操作的轻量级提示方式。
+      可提供成功、警告和错误等反馈信息。 顶部居中显示并自动消失，是一种不打断用户操作的轻量级提示方式。
     </p>
     <h3>代码演示</h3>
     <div class="p clearfix">
-      <ma-button ma-click="showMessage('success')">success</ma-button>
-      <ma-button ma-click="showMessage('danger')">danger</ma-button>
-      <ma-button ma-click="showMessage('warning')">warning</ma-button>
-    </div>
-    <div class="p">
-      <code>
-    $message.success('成功提示框，主要用来显示成功信息。');
-    $message.danger('警告提示框，主要用来显示重要信息。');
-    $message.warning('危险提示框，主要用来显示错误信息。');
-      </code>
-      <div class="pt-10">
-        <a href="https://jsfiddle.net/youpinyao/0zvsqb5g/" target="_blank">jsfiddle</a>
-      </div>
+      ${require('./code.html')}
+      <ma-code>
+        <div class="right">
+          <a href="https://jsfiddle.net/youpinyao/0zvsqb5g/"
+            target="_blank">jsfiddle</a>
+        </div>
+        <code><div ng-bind="codeText"></div>
+$message.success('成功提示框，主要用来显示成功信息。');
+$message.danger('警告提示框，主要用来显示重要信息。');
+$message.warning('危险提示框，主要用来显示错误信息。');
+        </code>
+      </ma-code>
     </div>
 
     <h3>API</h3>
