--- a/src/components/progress/src/maProgressTpl.html
+++ b/src/components/progress/src/maProgressTpl.html
@@ -7,7 +7,7 @@
   }"
   ng-style="{
     width: size + 'px',
-    height: size + 'px',
+    height: type !== 'line' ? (size + 'px') : '',
   }"
 >
   <svg
