--- a/example/pages/components/feedback/popconfirm/index.html
+++ b/example/pages/components/feedback/popconfirm/index.html
@@ -19,16 +19,14 @@
           ma-click-hide="true"
           ma-change-callback="changeCallback(show)"
           ma-direction="tr">
-          <a href="javascript:void(0)">点我我是气泡确认框</a>
+          <a href="javascript:void(0)">鼠标点击其他隐藏</a>
         </ma-popconfirm>
       </div>
       <div class="col-12">
         <ma-popconfirm ma-template="popconfirmTemplateText"
           ma-direction="tr"
-          ma-click-hide="true">
-          <a href="
-          javascript:void(0)
-          ">点我我是气泡文本框</a>
+          ma-click-hide="false">
+          <a href="javascript:void(0)">鼠标离开我自动隐藏</a>
         </ma-popconfirm>
       </div>
     </div>
